--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "eslint-plugin-unused-imports": "^1.1.2",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-camera": "^4.0.0",
+    "react-native-camera-hooks": "^0.5.1",
     "react-native-elements": "^3.4.2",
+    "react-native-permissions": "^3.0.5",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
