--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     ],
     "transform": {
       "^.+\\.(js)$": "<rootDir>/node_modules/babel-jest",
-      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js",
+      "node_modules/variables/.+\\.(j|t)sx?$": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "testPathIgnorePatterns": [
@@ -74,8 +75,8 @@
       "<rootDir>/node_modules/"
     ],
     "cacheDirectory": ".jest/cache",
-    "globals": {
-      "cy": true
-    }
+    "transformIgnorePatterns": [
+      "node_modules/(?!variables/.*)"
+    ]
   }
 }
