--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     ],
     "cacheDirectory": ".jest/cache",
     "transformIgnorePatterns": [
-      "node_modules/(?!variables/.*)"
+      "node_modules/(?!variables/.*)",
+      "node_modules/@react-native"
     ]
   }
 }
