--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     ],
     "cacheDirectory": ".jest/cache",
     "transformIgnorePatterns": [
-      "node_modules/(?!(@react-native|react-native)/)"
+      "node_modules/(?!(@react-native|react-native|variables/.*)/)"
     ]
   }
 }
