--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     ],
     "cacheDirectory": ".jest/cache",
     "transformIgnorePatterns": [
-      "node_modules/(?!(@react-native|react-native|react-native-camera|react-native-camera-hooks|react-native-elements)/)"
+      "node_modules/(?!(jest-)?react-native|react-(native|universal|navigation)-(.*)|@react-native-community/(.*)|@react-navigation/(.*)|bs-platform|(@[a-zA-Z]+/)?(bs|reason|rescript)-(.*)+)"
     ]
   }
 }
