--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     ],
     "cacheDirectory": ".jest/cache",
     "transformIgnorePatterns": [
-      "node_modules/(?!(jest-)?react-native|react-(native|universal|navigation)-(.*)|@react-native-community/(.*)|@react-navigation/(.*)|bs-platform|(@[a-zA-Z]+/)?(bs|reason|rescript)-(.*)+)"
+      "node_modules/(?!(react-native|qr-scanner|@react-native)/)"
     ]
   }
 }
