--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     ],
     "cacheDirectory": ".jest/cache",
     "transformIgnorePatterns": [
-      "node_modules/(?!(react-native|qr-scanner|@react-native|react-native-camera|react-native-camera-hooks|react-native-elements|@react-native-community|react-native-size-matters)/)"
+      "<rootDir>/node_modules/(react-clone-referenced-element|@react-native-community|react-navigation|@react-navigation/.*|@unimodules/.*|native-base|react-native-code-push)"
     ]
   }
 }
