--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-cypress": "^2.11.3",
@@ -27,6 +28,7 @@
     "react-native-camera-hooks": "^0.5.1",
     "react-native-elements": "^3.4.2",
     "react-native-permissions": "^3.0.5",
+    "react-native-safe-area-context": "^3.2.0",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
