--- a/package.json
+++ b/package.json
@@ -84,6 +84,9 @@
     "cacheDirectory": ".jest/cache",
     "transformIgnorePatterns": [
       "<rootDir>/node_modules/(react-clone-referenced-element|@react-native-community|react-navigation|@react-navigation/.*|@unimodules/.*|native-base|react-native-code-push)"
-    ]
+    ],
+    "resolutions": {
+      "react-native/@jest/create-cache-key-function": "^27.0.2"
+   }
   }
 }
