--- a/package.json
+++ b/package.json
@@ -84,8 +84,9 @@
     "cacheDirectory": ".jest/cache",
     "transformIgnorePatterns": [
       "<rootDir>/node_modules/(react-clone-referenced-element|@react-native-community|react-navigation|@react-navigation/.*|@unimodules/.*|native-base|react-native-code-push)"
-    ],
-    "resolutions": {
-      "@jest/create-cache-key-function": "^27.0.1"   }
+    ]
+  },
+  "resolutions": {
+    "react-native/@jest/create-cache-key-function": "^27.0.2"
   }
 }
