--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-camera-hooks": "^0.5.1",
     "react-native-elements": "^3.4.2",
     "react-native-permissions": "^3.0.5",
+    "react-native-qrcode-scanner": "^1.5.4",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-vector-icons": "^8.1.0"
   },
